hphp/test/zend/good/ext-standard-file/php_fd_wrapper_01.php
<?php
$f = fopen("php://fd/1", "wb");
fwrite($f, "hi!");

echo "\nDone.\n";