hphp/test/zend/bad/ext/standard/tests/file/php_fd_wrapper_04.php
<?php
fopen("php://fd/12", "w");

echo "\nDone.\n";